Identificación de imagenes usando TensorFlow
Identificar perros usando kNN

--- a/K-nearest neighbor.ipynb
+++ b/K-nearest neighbor.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "UNIVERSIDAD GALILEO\n",
+    "\n",
+    "STATISTICAL LEARNING\n",
+    "\n",
+    "Marco Vinicio Escalante Lara\n",
+    "\n",
+    "Carnet: 19001148"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
